force-app/main/default/objects/Partnership_Deliverables__c/Partnership_Deliverables__c.object-meta.xml
<CustomObject>
    <description>This object is used to track partner deliverables.</description>
    <label>Partnership Deliverables</label>
    <nameField>
        <displayFormat>{000000}</displayFormat>
        <label>Partnership Deliverables Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Partnership Deliverables</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>