force-app/main/default/objects/Partnership_Deliverables__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Partnership Deliverables</relationshipLabel>
    <relationshipName>Partnership_Deliverables</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>