force-app/main/default/objects/Partnership_Deliverables__c/fields/Campaign__c.field-meta.xml
<CustomField>
    <fullName>Campaign__c</fullName>
    <description>Used to track what campaign the deliverable was related to. Team did not want a lookup to campaigns but just a text field.</description>
    <label>Campaign</label>
    <length>255</length>
    <type>Text</type>
</CustomField>