force-app/main/default/objects/Partnership_Deliverables__c/fields/Channel__c.field-meta.xml
<CustomField>
    <fullName>Channel__c</fullName>
    <label>Channel</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Instagram Static</fullName>
            </value>
            <value>
                <fullName>Instagram Story</fullName>
            </value>
            <value>
                <fullName>Facebook</fullName>
            </value>
            <value>
                <fullName>Twitter</fullName>
            </value>
            <value>
                <fullName>LinkedIn</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>