force-app/main/default/objects/Partnership_Deliverables__c/fields/Completed_Date__c.field-meta.xml
<CustomField>
    <fullName>Completed_Date__c</fullName>
    <description>Date this deliverable was completed</description>
    <inlineHelpText>Date this deliverable was completed</inlineHelpText>
    <label>Completed Date</label>
    <type>Date</type>
</CustomField>