force-app/main/default/objects/Partnership_Deliverables__c/fields/Deliverable_Status__c.field-meta.xml
<CustomField>
    <fullName>Deliverable_Status__c</fullName>
    <label>Deliverable Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Complete</fullName>
            </value>
            <value>
                <fullName>Incomplete</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>