force-app/main/default/objects/Partnership_Deliverables__c/fields/Notes__c.field-meta.xml
<CustomField>
    <fullName>Notes__c</fullName>
    <inlineHelpText>Any notes or comments regarding this deliverable?</inlineHelpText>
    <label>Notes</label>
    <type>TextArea</type>
</CustomField>