force-app/main/default/objects/Partnership_Deliverables__c/fields/Partner_Cycle__c.field-meta.xml
<CustomField>
    <fullName>Partner_Cycle__c</fullName>
    <formula>TEXT(YEAR(Account__r.Renewal_Date__c)-1)&amp; &quot;-&quot; &amp; TEXT(YEAR(Account__r.Renewal_Date__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Partner Cycle</label>
    <type>Text</type>
</CustomField>