force-app/main/default/objects/Partnership_Deliverables__c/fields/Partner_Deliverable__c.field-meta.xml
<CustomField>
    <fullName>Partner_Deliverable__c</fullName>
    <inlineHelpText>Which deliverable did the partner complete?</inlineHelpText>
    <label>Partner Action Taken</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Attended Lobby Day</fullName>
            </value>
            <value>
                <fullName>Attended POW Summit</fullName>
            </value>
            <value>
                <fullName>Launched collab product</fullName>
            </value>
            <value>
                <fullName>Donated in-kind product</fullName>
            </value>
            <value>
                <fullName>Hosted custom education/training</fullName>
            </value>
            <value>
                <fullName>Hosted activation/program/event</fullName>
            </value>
            <value>
                <fullName>Reshared POW social content</fullName>
            </value>
            <value>
                <fullName>Posted original social content featuring POW</fullName>
            </value>
            <value>
                <fullName>Signed sign-on letter</fullName>
            </value>
            <value>
                <fullName>Wrote op-ed</fullName>
            </value>
            <value>
                <fullName>Featured POW in internal or external email comms</fullName>
            </value>
            <value>
                <fullName>Attended In The Weeds training session</fullName>
            </value>
            <value>
                <fullName>Promoted Team POW</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Carbon Offsets</fullName>
                <isActive>false</isActive>
                <label>Carbon Offsets</label>
            </value>
            <value>
                <fullName>Divest from Fossil Fuels</fullName>
                <isActive>false</isActive>
                <label>Divest from Fossil Fuels</label>
            </value>
            <value>
                <fullName>OIA Sustainability Working Group</fullName>
                <isActive>false</isActive>
                <label>OIA Sustainability Working Group</label>
            </value>
            <value>
                <fullName>POW CTA Distribution</fullName>
                <isActive>false</isActive>
                <label>POW CTA Distribution</label>
            </value>
            <value>
                <fullName>POW_Carbon</fullName>
                <isActive>false</isActive>
                <label>POW Carbon Neutral</label>
            </value>
            <value>
                <fullName>POW Presentation</fullName>
                <isActive>false</isActive>
                <label>POW Presentation</label>
            </value>
            <value>
                <fullName>Social Post</fullName>
                <isActive>false</isActive>
                <label>Social Post</label>
            </value>
            <value>
                <fullName>Website_Pres</fullName>
                <isActive>false</isActive>
                <label>Website Presence</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>