force-app/main/default/objects/Partnership_Deliverables__c/fields/Partner_Level__c.field-meta.xml
<CustomField>
    <fullName>Partner_Level__c</fullName>
    <label>Partner Level</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>$150,000+</fullName>
            </value>
            <value>
                <fullName>$100,000</fullName>
            </value>
            <value>
                <fullName>$50,000</fullName>
            </value>
            <value>
                <fullName>$25,000</fullName>
            </value>
            <value>
                <fullName>$10,000</fullName>
            </value>
            <value>
                <fullName>$5,000</fullName>
            </value>
            <value>
                <fullName>Contributing</fullName>
                <isActive>false</isActive>
                <label>Contributing</label>
            </value>
            <value>
                <fullName>Foundation</fullName>
                <isActive>false</isActive>
                <label>Foundation</label>
            </value>
            <value>
                <fullName>Lhoste</fullName>
                <isActive>false</isActive>
                <label>Lhoste</label>
            </value>
            <value>
                <fullName>Partner</fullName>
                <isActive>false</isActive>
                <label>Partner</label>
            </value>
            <value>
                <fullName>Shangri La</fullName>
                <isActive>false</isActive>
                <label>Shangri La</label>
            </value>
            <value>
                <fullName>Summit</fullName>
                <isActive>false</isActive>
                <label>Summit</label>
            </value>
            <value>
                <fullName>Supporting</fullName>
                <isActive>false</isActive>
                <label>Supporting</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>