force-app/main/default/objects/Partnership_Deliverables__c/fields/POW__c.field-meta.xml
<CustomField>
    <fullName>POW__c</fullName>
    <defaultValue>false</defaultValue>
    <label>POW</label>
    <type>Checkbox</type>
</CustomField>