force-app/main/default/objects/Partnership_Deliverables__c/fields/POW_Deliverable__c.field-meta.xml
<CustomField>
    <fullName>POW_Deliverable__c</fullName>
    <label>POW Deliverable</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Supported collab product</fullName>
            </value>
            <value>
                <fullName>Provided custom education/training</fullName>
            </value>
            <value>
                <fullName>Provided activation/program/event support</fullName>
            </value>
            <value>
                <fullName>Posted/reshared/featured on social</fullName>
            </value>
            <value>
                <fullName>Invited to POW Summit</fullName>
            </value>
            <value>
                <fullName>Invited to Lobby Day</fullName>
            </value>
            <value>
                <fullName>Included in email newsletter</fullName>
            </value>
            <value>
                <fullName>Alliance product seeding</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Advocacy</fullName>
                <isActive>false</isActive>
                <label>Advocacy</label>
            </value>
            <value>
                <fullName>Collaboration_Product</fullName>
                <isActive>false</isActive>
                <label>Collaboration Product</label>
            </value>
            <value>
                <fullName>Custom Education/Training</fullName>
                <isActive>false</isActive>
                <label>Custom Education/Training</label>
            </value>
            <value>
                <fullName>Custom Program/Activation/Event</fullName>
                <isActive>false</isActive>
                <label>Custom Program/Activation/Event</label>
            </value>
            <value>
                <fullName>Event_and_activation_branding</fullName>
                <isActive>false</isActive>
                <label>Event and activation branding</label>
            </value>
            <value>
                <fullName>Exclusive_Campaign_Collaboration</fullName>
                <isActive>false</isActive>
                <label>Exclusive Campaign Collaboration</label>
            </value>
            <value>
                <fullName>Executive Op-Ed Support</fullName>
                <isActive>false</isActive>
                <label>Executive Op-Ed Support</label>
            </value>
            <value>
                <fullName>POW Annual Report Presence</fullName>
                <isActive>false</isActive>
                <label>POW Annual Report Presence</label>
            </value>
            <value>
                <fullName>POW_Brand</fullName>
                <isActive>false</isActive>
                <label>POW Brand</label>
            </value>
            <value>
                <fullName>POW_Member_and_Press_Communication</fullName>
                <isActive>false</isActive>
                <label>POW Member and Press Communication</label>
            </value>
            <value>
                <fullName>POW Social Amplification</fullName>
                <isActive>false</isActive>
                <label>POW Social Amplification</label>
            </value>
            <value>
                <fullName>POW_Partnership_Deck_Feature</fullName>
                <isActive>false</isActive>
                <label>POW’s Partnership Deck Feature</label>
            </value>
            <value>
                <fullName>Partners in Advocacy Feature</fullName>
                <isActive>false</isActive>
                <label>Partners in Advocacy Feature</label>
            </value>
            <value>
                <fullName>Team POW Email Highlight</fullName>
                <isActive>false</isActive>
                <label>Team POW Email Highlight</label>
            </value>
            <value>
                <fullName>Training</fullName>
                <isActive>false</isActive>
                <label>Training</label>
            </value>
            <value>
                <fullName>Web_Presence</fullName>
                <isActive>false</isActive>
                <label>Web Presence</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>