force-app/main/default/objects/Partnership_Deliverables__c/fields/Presenter__c.field-meta.xml
<CustomField>
    <fullName>Presenter__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <inlineHelpText>If POW Presentation, who was the presenter?</inlineHelpText>
    <label>Presenter</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Partnership Deliverables</relationshipLabel>
    <relationshipName>Partnership_Deliverables</relationshipName>
    <type>Lookup</type>
</CustomField>