force-app/main/default/objects/Partnership_Deliverables__c/recordTypes/Partnership_Deliverables.recordType-meta.xml
<RecordType>
    <fullName>Partnership_Deliverables</fullName>
    <active>true</active>
    <label>Partnership Deliverables</label>
</RecordType>