force-app/main/default/objects/Partnership_Deliverables__c/validationRules/Partner_Action_OR_POW_Deliverable.validationRule-meta.xml
<ValidationRule>
    <fullName>Partner_Action_OR_POW_Deliverable</fullName>
    <active>true</active>
    <errorConditionFormula>OR(
    AND(
        ISBLANK(TEXT(POW_Deliverable__c)),
        ISBLANK(TEXT(Partner_Deliverable__c))
    ),
    AND(
        NOT(ISBLANK(TEXT(POW_Deliverable__c))),
        NOT(ISBLANK(TEXT(Partner_Deliverable__c)))
    )
)</errorConditionFormula>
    <errorMessage>A value needs to be added to either POW Deliverable or Partner Action. Values cannot exist in both fields.</errorMessage>
</ValidationRule>